# libtropic-pkcs11

./: .gitignore  .gitmodules  Build.sh  Build_Debug.sh  BuildnRun.sh  CMakeLists.txt  README.md  WHATWASCHANGED.md  openssl.cnf  test_ossl.sh
examples/: Build.sh  BuildnRun.sh  EraseKey.sh  EraseUserData.sh  GenerateKey.sh  GenerateRandom.sh  Sign.sh  StoreUserData.sh  TestAll.sh  common.sh
examples/openssh/: README.md
examples/openssl/: ListProviders.sh  README.md  Sign.sh  Verify.sh  message.sig  message.txt  openssl_libp11_provider.cnf
examples/openvpn/: README.md  openssl_pkcs11.cnf
src/: pkcs11.c  pkcs11.h
tests/: Makefile  debug.sh  pkcs11.c  pkcs11.h  test_direct  test_direct.c  test_simple.conf
